[gd_scene load_steps=17 format=3 uid="uid://21wgui61a3l4"]

[ext_resource type="Script" uid="uid://d0twadyd7d8ny" path="res://player/scripts/player.gd" id="1_l8h54"]
[ext_resource type="Script" uid="uid://ck3dv0s720557" path="res://player/states/state_idle.gd" id="2_btcbx"]
[ext_resource type="Script" uid="uid://diqijf8kdqoda" path="res://player/states/state_run.gd" id="3_gwnis"]
[ext_resource type="Script" uid="uid://bfcejqxshiub5" path="res://player/states/state_jump.gd" id="4_gwnis"]
[ext_resource type="Script" uid="uid://ds5hdsnwo8hxp" path="res://player/states/state_fall.gd" id="5_k53q1"]
[ext_resource type="Script" uid="uid://3mbvv26tdkhn" path="res://player/states/state_crouch.gd" id="6_fhl08"]
[ext_resource type="Texture2D" uid="uid://bwjx1njxoe4pd" path="res://player/sprites/animated_cob.png" id="7_boad6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_boad6"]
radius = 8.0
height = 46.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rgyib"]
radius = 8.0

[sub_resource type="Animation" id="Animation_rgyib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_2ieo8"]
resource_name = "crouch"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "idle"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_8t03j"]
resource_name = "jump"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hg6s5"]
_data = {
&"RESET": SubResource("Animation_rgyib"),
&"crouch": SubResource("Animation_2ieo8"),
&"idle": SubResource("Animation_boad6"),
&"jump": SubResource("Animation_8t03j"),
&"run": SubResource("Animation_hg6s5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boad6"]
size = Vector2(16, 3)

[node name="Player" type="CharacterBody2D" groups=["Player", "player"]]
z_index = 1
collision_layer = 16
collision_mask = 3
floor_constant_speed = true
floor_snap_length = 3.0
script = ExtResource("1_l8h54")

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("2_btcbx")

[node name="Run" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("3_gwnis")

[node name="Jump" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("4_gwnis")

[node name="Fall" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("5_k53q1")

[node name="Crouch" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("6_fhl08")

[node name="player_sprite" type="Sprite2D" parent="."]
modulate = Color(0.73760307, 0.73760307, 0.73760307, 1)
position = Vector2(1, -39)
texture = ExtResource("7_boad6")
hframes = 8
vframes = 12
frame = 1

[node name="collision_stand" type="CollisionShape2D" parent="."]
position = Vector2(0, -23)
shape = SubResource("CapsuleShape2D_boad6")
debug_color = Color(0, 0.6, 0.69803923, 0.32156864)

[node name="collision_crouch" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_rgyib")
disabled = true
debug_color = Color(0, 0.6, 0.69803923, 0.32156864)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -30.0
offset_top = -77.0
offset_right = 30.0
offset_bottom = -54.0
theme_override_font_sizes/font_size = 12
text = "state"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hg6s5")
}
autoplay = "idle"

[node name="one_way_platform_shapecast" type="ShapeCast2D" parent="."]
position = Vector2(0, -3)
enabled = false
shape = SubResource("RectangleShape2D_boad6")
target_position = Vector2(0, 6)
max_results = 12
collision_mask = 2

[node name="player_camera" type="Camera2D" parent="."]
position = Vector2(0, -37)
